tests/bad/sintax2.nx
var x : int  = 0;

x := x + ;